# striga

./: .gitignore  README.md  bfs.py  binaryshield.py  blog.py  brighten.py  container.py  emulate.py  lift.py  pyproject.toml
.github/workflows/: ci.yml
docs/: blog-post.md  llvm-cheatsheet.md
src/striga/: __init__.py  semantics.py
src/striga/x86/: __init__.py  arithmetic.py  bitwise.py  control.py  data.py
tests/: cfg.asm  x86_ops.asm
traces/: summary.txt  trace_rcx_1337.txt  trace_rcx_1638.txt  trace_rcx_1859.txt  trace_rcx_2418.txt  trace_rcx_29763.txt  trace_rcx_299902.txt  unique_mnemonics.txt  vm_enter.txt
