[project]
name = "striga"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "capstone>=5.0.7",
    "icicle-emu>=0.0.11",
    "llvm",
    "pefile>=2024.8.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
llvm = { index = "testpypi" }

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
