[project]
name = "striga"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "capstone>=5.0.7",
    "icicle-emu>=0.0.11",
    "llvm-nanobind==21.1.6.3",
    "pefile>=2024.8.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
