[project]
name = "striga"
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "capstone>=5.0.7",
    "icicle-emu>=0.0.11",
    "llvm-nanobind==21.1.6.3",
    "pefile>=2024.8.26",
]

[project.urls]
Repository = "https://github.com/LLVMParty/striga"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
